apps/jellyfin/k8s/exporter.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin-exporter
  namespace: jellyfin
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin-exporter
  template:
    metadata:
      labels:
        app: jellyfin-exporter
    spec:
      enableServiceLinks: false
      containers:
        - name: jellyfin-exporter
          image: "rebelcore/jellyfin-exporter:v1.5.2@sha256:8a1294b7fea80993e4ec18220e391578e0f9ca9e109294fd6a379d2cb5213c85"
          ports:
            - name: metrics
              containerPort: 9594
          startupProbe:
            httpGet:
              path: /metrics
              port: metrics
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /metrics
              port: metrics
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /metrics
              port: metrics
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          securityContext:
            runAsUser: 65534
            runAsGroup: 65534
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
