apps/jellyfin/k8s/exporter.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-exporter
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: jellyfin-exporter
  ports:
    - name: metrics
      port: 9594
      targetPort: metrics
      protocol: TCP
