apps/jellyfin/k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
  hostnames:
    - jellyfin.biplane.v6.rocks
    - jellyfin.biplane.casa
  rules:
    - backendRefs:
        - name: jellyfin
          port: 80
